[package]
name = "rdb-client"
version = "0.1.0"
edition = "2021"

[dependencies]
console = "0.15"
lazy_static = "1.4.0"
regex = "1.5.5"
reqwest = { version = "0.11", features = ["blocking"] }
semver = "1.0.7"
url = "2.2.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
